[package]
name = "cranelift-jit-demo"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.69.0"
cranelift-module = "0.69.0"
cranelift-jit = "0.69.0"
peg = "0.6"