[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# build command
# LLVM_SYS_110_PREFIX=/usr/local/Cellar/llvm/11.0.0_1 cargo build

# LLVM_SYS_110_PREFIX=/usr/local/Cellar/llvm/11.0.0_1 cargo run --bin kaleido
[[bin]]
name = "kaleido"
path = "src/bin/kaleidoscope.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }